--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "ethers": "^6.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.3",
