--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-toastify": "^9.1.3",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "recharts": "^2.9.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.3",
