--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^18.2.0",
     "react-toastify": "^9.1.3",
     "react-icons": "^4.12.0",
-    "recharts": "^2.9.0"
+    "recharts": "^2.9.0",
+    "framer-motion": "^11.0.3"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.3",
